--- a/common/style/iconfont.css
+++ b/common/style/iconfont.css
@@ -1,10 +1,6 @@
-@font-face {font-family: "iconfont";
-  src: url('//at.alicdn.com/t/font_1426017_rid454qdj2f.eot');
-    src: url('//at.alicdn.com/t/font_1426017_rid454qdj2f.eot?#iefix') format('embedded-opentype'),
-    url('//at.alicdn.com/t/font_1426017_rid454qdj2f.woff2') format('woff2'),
-    url('//at.alicdn.com/t/font_1426017_rid454qdj2f.woff') format('woff'),
-    url('//at.alicdn.com/t/font_1426017_rid454qdj2f.ttf') format('truetype'),
-    url('//at.alicdn.com/t/font_1426017_rid454qdj2f.svg#iconfont') format('svg');
+@font-face {
+	font-family: 'iconfont';
+	src: url('https://at.alicdn.com/t/font_1426017_yva89zrk5ej.ttf') format('truetype');
 }
 
 .iconfont {
@@ -51,11 +47,111 @@
   content: "\e623";
 }
 
+.icon-shouye:before {
+  content: "\e617";
+}
+
+.icon-shouye1:before {
+  content: "\e61a";
+}
+
+.icon-home_line:before {
+  content: "\e625";
+}
+
+.icon-home:before {
+  content: "\e626";
+}
+
 .icon-weiwangguanicon-defuben-:before {
   content: "\e66e";
 }
 
+.icon-42:before {
+  content: "\e600";
+}
+
 .icon-qianbao:before {
   content: "\e611";
+}
+
+.icon-Graph:before {
+  content: "\e61f";
+}
+
+.icon-Graph1:before {
+  content: "\e635";
+}
+
+.icon-baoguandanguanli:before {
+  content: "\e603";
+}
+
+.icon-bangzhuzhongxin:before {
+  content: "\e604";
+}
+
+.icon-bangzhuzhongxin1:before {
+  content: "\e605";
+}
+
+.icon-dingdanguanli:before {
+  content: "\e606";
+}
+
+.icon-dingdanguanli1:before {
+  content: "\e607";
+}
+
+.icon-jiesuanguanli:before {
+  content: "\e608";
+}
+
+.icon-baoguandanguanli1:before {
+  content: "\e609";
+}
+
+.icon-kehuguanli:before {
+  content: "\e60a";
+}
+
+.icon-qiyeshezhi:before {
+  content: "\e60c";
+}
+
+.icon-qiyeshezhi1:before {
+  content: "\e60d";
+}
+
+.icon-kehuguanli1:before {
+  content: "\e60e";
+}
+
+.icon-xiaoxizhongxin:before {
+  content: "\e60f";
+}
+
+.icon-xiaoxizhongxin1:before {
+  content: "\e610";
+}
+
+.icon-zaixianzixun:before {
+  content: "\e612";
+}
+
+.icon-zaixianzixun1:before {
+  content: "\e613";
+}
+
+.icon-renwuzhongxin:before {
+  content: "\e614";
+}
+
+.icon-jiesuanguanli1:before {
+  content: "\e615";
+}
+
+.icon-renwuzhongxin1:before {
+  content: "\e616";
 }
 
