--- a/pages/index/index.css
+++ b/pages/index/index.css
@@ -1,4 +1,82 @@
+.service,.notice_annount,.category_home{
+	padding:0 20rpx;
+}
+.test {
+	font-family: iconfont;
+	margin-left: 20rpx;
+}
+
 .banner{
 	width:100%;
 	height:320upx;
+}
+/**
+ * 客服 
+ */
+.service{
+	display:flex;
+	flex-direction:row-reverse;
+	height:70rpx;
+}
+.service-input{
+	align-self: center;
+	display:flex;
+}
+.service-icon{
+	font-size:42rpx;
+	width:50rpx;
+	flex:0 0 50rpx;
+	color:#2580EF;
+}
+
+.service-text{
+	font-size:30rpx;
+	flex:0 0 120rpx;
+	width:120rpx;
+	color:#2580EF;
+	line-height:45rpx;
+}
+
+/**
+ * 分类
+ */
+.category_home{
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+.category_list{
+	width:345rpx;
+	height:100rpx;
+	position:relative;
+	border-radius:10rpx;
+	flex:0 0 345rpx;
+	margin-bottom:20rpx
+}
+.category_list:nth-child(even){
+	margin-left:20rpx;
+}
+.category_text{
+	text-align:center;
+	line-height:100rpx;
+	font-size:28rpx;
+	text-align:center;
+	display:block;
+	color:#fff;
+}
+.category_backgorund{
+	position:absolute;
+	background: url('../../static/images/quick_bg3.png') no-repeat;
+	width:100%;
+	height:100%;
+	background-size:cover;
+	top:0;
+	left:0;
+}
+.upside_list_class{
+	width:100%;
+	flex: 0 0 100%;
+}
+.upside_list_class .img{
+	background:url('../../static/images/quick_bg4.png') no-repeat;
 }
