--- a/pages/login/login.scss
+++ b/pages/login/login.scss
@@ -8,6 +8,7 @@
 			margin:70rpx auto 30rpx;
 			display:block;
 			border-radius:100%;
+			background:#999;
 		}
 		.logo_txt{
 			display:block;
@@ -37,11 +38,13 @@
 				width:100%;
 				height:60rpx;
 				font-size:28rpx;
+				border:none;
+				outline: none;
 			}
 			.login_hide_pwd{
 				position:absolute;
 				right:15rpx;
-				top:10rpx;
+				top:25rpx;
 			}
 		}
 		.login_form_forgetPassword{
