--- a/pages/index/index.scss
+++ b/pages/index/index.scss
@@ -1,6 +1,6 @@
 .service,
 .notice_annount,
-.category_home,.news_prople,.hot_activity {
+.category_box,.news_prople,.hot_activity {
 	padding: 0 20rpx;
 }
 .test {
@@ -13,142 +13,4 @@
 .indexHome{
 	/* background:#fff; */
 	/* background:#E6CEAC; */
-	/* 首页 */
-	.banner {
-		width: 100%;
-		height: 320rpx;
-	}
-	/* 客服 */
-	.service {
-		display: flex;
-		flex-direction: row-reverse;
-		height: 70rpx;
-		.service-input {
-			align-self: center;
-			display: flex;
-			.service-text {
-				font-size: 30rpx;
-				flex: 0 0 120rpx;
-				width: 120rpx;
-				line-height: 45rpx;
-				padding-left:10rpx;
-			}
-		}
-	}
-	/**
-	* 滚动
-	*/
-	.noticeBox {
-	    padding:0 20rpx;
-	    position: relative;
-	    text-align: left;
-	    height: 80rpx;
-	    margin-bottom:20rpx;
-		.notice_box{
-			  width:100%;
-			  overflow: hidden;
-			  height: 80rpx;
-			  display:flex;
-			  flex-direction: row;
-			  border-radius:10rpx;
-			  .notice_icon{
-			  	  width:80rpx;
-			  	  text-align:center;
-				  position:relative;
-				  padding-top:20rpx;
-				  .uni-icon-laba{
-					 position:absolute;
-					 top:20rpx;
-					 left:22rpx;
-					 display:block;
-				  }
-			  	  // font-size:36rpx;
-			  }
-			  .notice{
-			  	  width: 620rpx;
-			  	  text-overflow: ellipsis;
-			  	  white-space: nowrap; 
-			  	  overflow: hidden;
-				  .text {
-				    width: 100%;
-				  	font-size:28rpx;
-				  	line-height:80rpx;
-				  }
-			  }
-		}
-	}
-	/**
-	 * 分类
-	 */
-	.category_home {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		.category_list {
-			width: 345rpx;
-			height: 100rpx;
-			position: relative;
-			border-radius: 10rpx;
-			flex: 0 0 345rpx;
-			margin-bottom: 20rpx;
-			&:nth-child(even) {
-				margin-left: 20rpx;
-			}
-			.category_text {
-				text-align: center;
-				line-height: 100rpx;
-				font-size: 30rpx;
-				text-align: center;
-				display: block;
-				color: #fff;
-			}
-			.category_backgorund {
-				position: absolute;
-				background: url('../../static/images/quick_bg3.png') no-repeat;
-				width: 100%;
-				height: 100%;
-				background-size: cover;
-				top: 0;
-				left: 0;
-			}
-		}
-		.upside_list_class {
-			width: 100%;
-			flex: 0 0 100%;
-			.img {
-				background: url('../../static/images/quick_bg4.png') no-repeat;
-			}
-		}
-	}
-	/*
-	** 新手引导
-	*/
-	.news_prople{
-		.news_title{
-			font-size:30rpx;
-		}
-		.news_images{
-			width:100%;
-			height:52rpx;
-			background:url('../../static/images/new_prople.png') no-repeat;
-			background-size:cover;
-			margin-top:15rpx;
-		}
-		.news_text{
-			font-size:26rpx;
-			line-height:52rpx;
-			text-align:center;
-			display:block;
-		}
-	}
-}
-
-.slide-enter-active, .slide-leave-active {
-transition: all 0.5s linear;
-}
-.slide-enter{
-opacity: 1;
-}
-.slide-leave-to {
-opacity: 0;
 }
