--- a/pages/my/my.scss
+++ b/pages/my/my.scss
@@ -66,7 +66,7 @@
 					border-radius:10rpx;
 				}
 				.goReadNameTwo{
-					width:120rpx;
+					width:170rpx;
 					.readNameSuccess{
 						padding:0 10rpx 0;
 					}
@@ -115,10 +115,10 @@
 			position:relative;
 			.num{
 				line-height:80rpx;
-				font-size:40rpx;
+				font-size:38rpx;
 			}
 			.rate{
-				padding-top:5rpx;
+				font-size:22rpx;
 			}
 			.right_line{
 				position:absolute;
@@ -175,62 +175,64 @@
 		}
 	}
 	/* 九宫格布局 */
-	.grid_box{
-		background:#fff;
-		margin-top:20rpx;
-		.grid-title{
-			display: flex;
-			align-items: center;
-			font-size: 28rpx;
-			color: rgba(0,0,0,.63);
-			padding: 30rpx 40rpx;
-			// view{
-			// 	width: 8upx;
-			// 	height: 30upx;
-			// 	background-color: rgba(255,82,65,1);
-			// 	margin-right: 20upx;
-			// }
-		}
-		.grid{
-			display: flex;
-			align-items: center;
-			flex-wrap: wrap;
-			border-top: 2rpx solid rgba(172,172,172,.2);
-			.grid-item-3,.grid-item-4{
-				box-sizing: border-box;
-				width: calc(100% / 3);
-				border-bottom: 2rpx solid rgba(172,172,172,.2);
-				border-right: 2rpx solid rgba(172,172,172,.2);
-				text-align: center;
-				padding: 40rpx 0;
-				position: relative;
-				image{
-					width: 48rpx;
-					height: 48rpx;
-				}
-				view{
-					font-size: 24rpx;
-					margin-top: 12rpx;
-					color: rgba(0,0,0,.53);
-				}
-				text{
-					display: block;
-					padding: 4rpx 8rpx;
+	.grid_row_list{
+		.grid_box{
+			background:#fff;
+			margin-top:20rpx;
+			.grid-title{
+				display: flex;
+				align-items: center;
+				font-size: 28rpx;
+				color: rgba(0,0,0,.63);
+				padding: 30rpx 40rpx;
+				// view{
+				// 	width: 8upx;
+				// 	height: 30upx;
+				// 	background-color: rgba(255,82,65,1);
+				// 	margin-right: 20upx;
+				// }
+			}
+			.grid{
+				display: flex;
+				align-items: center;
+				flex-wrap: wrap;
+				border-top: 2rpx solid rgba(172,172,172,.2);
+				.grid-item-3,.grid-item-4{
+					box-sizing: border-box;
+					width: calc(100% / 3);
+					border-bottom: 2rpx solid rgba(172,172,172,.2);
+					border-right: 2rpx solid rgba(172,172,172,.2);
 					text-align: center;
-					border-radius: 36rpx;
-					font-size: 24rpx;
-					background-color: rgba(255,82,65,1);
-					color: rgba(255,255,255,1);
-					position: absolute;
-					right: 6rpx;
-					top: 6rpx;
+					padding: 40rpx 0;
+					position: relative;
+					image{
+						width: 48rpx;
+						height: 48rpx;
+					}
+					view{
+						font-size: 24rpx;
+						margin-top: 12rpx;
+						color: rgba(0,0,0,.53);
+					}
+					text{
+						display: block;
+						text-align: center;
+						border-radius: 36rpx;
+						font-size: 24rpx;
+						padding:4rpx 12rpx;
+						background-color: rgba(255,82,65,1);
+						color: rgba(255,255,255,1);
+						position: absolute;
+						right: 6rpx;
+						top: 6rpx;
+					}
 				}
-			}
-			.grid-item-3:nth-child(3n + 3),.grid-item-4:nth-child(4n + 4){
-				border-right: none;
-			}
-			.grid-item-4{
-				width: calc(100% / 4);
+				.grid-item-3:nth-child(3n + 3),.grid-item-4:nth-child(4n + 4){
+					border-right: none;
+				}
+				.grid-item-4{
+					width: calc(100% / 4);
+				}
 			}
 		}
 	}
