--- a/pages/my/my.scss
+++ b/pages/my/my.scss
@@ -67,6 +67,11 @@
 				}
 				.goReadNameTwo{
 					width:170rpx;
+					.uni-icon-shimingrenzheng{
+						float:left;
+						margin-left:5rpx;
+						margin-top:6rpx;
+					}
 					.readNameSuccess{
 						padding:0 10rpx 0;
 					}
