--- a/pages/my/userCenter/bank/bank.scss
+++ b/pages/my/userCenter/bank/bank.scss
@@ -1,6 +1,57 @@
 page{
-	background:#f8f8f8;
+	background:#303030;
 }
 .bankView{
 	padding:0 20rpx;
+	.bank_list{
+		padding-top:30rpx;
+		.noBank{
+			width:100%;
+			height:200rpx;
+			background:#444;
+			border:solid 3rpx #555;
+			border-radius:15rpx;
+			.addBanks{
+				height:80rpx;
+				border-radius:0;
+				display:block;
+				color:#eee;
+				text-align: center;
+				padding-top:50rpx;
+				.addIcon{
+					width:30rpx;
+					height:30rpx;
+					display:inline-block;
+					margin:20rpx 0;
+					image{
+						width:100%;
+						height:100%;
+					}
+				}
+				.add_text{
+					line-height:80rpx;
+					text-indent:10rpx;
+					font-size:38rpx;
+					display:inline-block;
+					text-align:center;
+					color:#777;
+				}
+			}
+		}
+	}
+	.tip{
+		color:#ddd;
+		margin-top:300rpx;
+		.sp2{
+			font-size:28rpx;
+			display:block;
+			margin-bottom:20rpx;
+			&.sp3{
+				padding:0 20rpx;
+			}
+			.phone{
+				border-bottom:2rpx solid #ccc;
+			}
+		}
+	}
 }
