修改一些样式

--- a/pages/my/userCenter/bank/bank.scss
+++ b/pages/my/userCenter/bank/bank.scss
@@ -98,6 +98,7 @@ page{
 		padding-top:10rpx;
 		border-bottom:2rpx solid #eee;
 		height:60rpx;
+		padding-bottom:15rpx;
 		.bankIcon{
 			width:25rpx;
 			height:25rpx;
@@ -109,7 +110,7 @@ page{
 		}
 		.add_text{
 			font-size:28rpx;
-			line-height:60rpx;
+			line-height:70rpx;
 			display:inline-block;
 			text-indent:10rpx;
 			color:#666;
