完成实名认证，加入提现页面，加入小数字键盘组件

--- a/pages/my/userCenter/setting/setting.scss
+++ b/pages/my/userCenter/setting/setting.scss
@@ -42,7 +42,7 @@ page{
 		}
 	}
 	
-	.setting_middle,.setting_middle2,.setting_logout{
+	.setting_middle,.setting_middle2,.setting_logout,.setting_top{
 		margin-top:20rpx;
 	}
 	.setting_logout{
