完成修改资金密码，完成充值记录(70%)

--- a/pages/my/userCenter/setting/setLoginPassword/setLoginPassword.scss
+++ b/pages/my/userCenter/setting/setLoginPassword/setLoginPassword.scss
@@ -5,6 +5,7 @@ page{
 	.setTopView{
 		height:200rpx;
 		border-top:1px solid #f3f3f3;
+		border-bottom:1px solid #f3f3f3;
 		background:#fff;
 		.userText1{
 			margin-top:22rpx;
@@ -90,6 +91,7 @@ page{
 		color:#666;
 		font-size:32rpx;
 		flex:1;
+		text-align:center;
 	}
 	.imgView{
 		flex:1;
