--- a/pages/my/userCenter/rechargeRecord/rechargeRecord.scss
+++ b/pages/my/userCenter/rechargeRecord/rechargeRecord.scss
@@ -47,9 +47,10 @@
 }
 .typeTerm{
 	.typeTermTitle{
-		text-align:center;
+		text-align:left;
 		font-size:30rpx;
 		line-height:76rpx;
+		text-indent:20rpx;
 		border-bottom:1px solid #eee;
 		color:#555;
 	}
@@ -87,6 +88,21 @@
 		&.confirm{
 			background:#1b82d1;
 		}
+	}
+}
+.noDataImg{
+	width:280rpx;
+	height:180rpx;
+	margin:180rpx auto 0;
+	.img{
+		width:100%;
+		height:100%;
+	}
+	.noDataText{
+		display:block;
+		color:#999;
+		font-size:34rpx;
+		text-align:center;
 	}
 }
 .rechargeTitle,.rechargeBox{
