--- a/pages/my/userCenter/addBank/addBank.scss
+++ b/pages/my/userCenter/addBank/addBank.scss
@@ -2,7 +2,6 @@
 	padding:24rpx 0;
 	.addBank_tip{
 		padding:0 32rpx;
-		font-size:30rpx;
 		display:flex;
 		flex-direction:row;
 		.uni-icon-wenti{
@@ -12,12 +11,12 @@
 		.meBankTip{
 			flex:1;
 			text-indent:10rpx;
-			line-height:50rpx;
 			color:#888;
 		}
 	}
 	.bankInput{
 		background:#fff;
+		margin-top:20rpx;
 		.bankCartName{
 			display:flex;
 			flex-direction:row;
@@ -27,7 +26,6 @@
 			border-bottom:1px solid #f8f8f8;
 			.flexBankView{
 				flex:0 0 1;
-				font-size:32rpx;
 				line-height:96rpx;
 				color:#777;
 				&.title{
