--- a/common/style/daytime.scss
+++ b/common/style/daytime.scss
@@ -3,77 +3,77 @@ $materColor:#2580EF; /* 主题颜色 */
 $fontColor:#666; /* 字体颜色 */ 
 $skeleton:#efefef; /*骨架颜色*/
 
-/* 白天模式 */
+/* 颜色 */
 .daytime{
 	background-color:$bgColor;
 	height:100%;
 }
 /* 自定义头部导航颜色(白天) */
-.daytime .tabbar_navigator{
+.tabbar_navigator{
 	background-color:$materColor;
 }
 /* 自定义tabbar颜色(白天) */
-.daytime .tabbar_footer{
+.tabbar_footer{
 	background-color:$bgColor;
 	border-top:1rpx #eee solid;
 }
 /* 图标颜色和样式 */
-.daytime .uni-icon-kefu{
+.uni-icon-kefu{
 	color: $materColor !important;
 	margin-top:2rpx;
 }
 /* 首页客服字体颜色 */
-.daytime .service-icon,.daytime .service-text{
+.service-icon,.service-text{
 	color:$materColor;
 }
-.daytime .service-skeleton{
+.service-skeleton{
 	background:#d8e6f6;
 }
 /* 首页通知字体颜色 */
-.daytime .notice_box{
+.notice_box{
 	background:$skeleton;
 }
-.daytime .text,.daytime .notice_icon{
+.text,.notice_icon{
 	color:#333;
 }
 /* 首页套餐分类颜色 */
-.daytime .category_home .category_list{
+.category_home .category_list{
 	opacity:1;
 }
-.daytime .category_skeleton{
+.category_skeleton{
 	background:$skeleton;
 }
 /* 新手引导字体颜色 */
-.daytime .news_prople .news_images{
+.news_prople .news_images{
 	box-shadow:0 -4rpx 3rpx 2rpx rgba(0,0,0,.05), 0 5rpx 5rpx 0 #afbae5
 }
-.daytime .news_prople .news_title,.daytime .news_prople .news_text{
+.news_prople .news_title,.news_prople .news_text{
 	color:$fontColor
 }
-.daytime .news_title_box{
+.news_title_box{
 	background:$skeleton
 }
-.daytime .news_skeleton{
+.news_skeleton{
 	background:$skeleton
 }
-.daytime .news_title_box{
+.news_title_box{
 	background:$skeleton
 }
 /* 首页活动 */
-.daytime .hot_activity .activity_title{
+.hot_activity .activity_title{
 	color:$fontColor
 }
-.daytime .activity_image_skeleton,.daytime .activity_boxs .activity_list{
+.activity_image_skeleton,.activity_boxs .activity_list{
 	background:$skeleton
 }
 
 /*行情分类*/
-.daytime .category_boxs .category_list{
+.category_boxs .category_list{
 	background:$skeleton
 }
 
 /* 登陆 */
-.daytime .login_submit_int{
+.login_submit_int{
 	background:$materColor !important;
 	color:#eee !important;
 }
