--- a/common/style/themeFontSize.scss
+++ b/common/style/themeFontSize.scss
@@ -1,66 +1,414 @@
 // 基本字体
-$twentySixSize:26rpx;
-$twentyEightSize:28rpx;
-$thirtySize:30rpx;
-.daytime .service-text{
-	font-size:$thirtySize;
-}
-.daytime .text{
-	font-size:$twentyEightSize;
-}
-.daytime .category_list .category_text{
-	font-size:$thirtySize;
-}
-.daytime .news_prople .news_title{
-	font-size:$thirtySize;
-}
-.daytime .hot_activity .activity_text{
-	font-size:$thirtySize;
-}
-.daytime .news_prople .news_text{
-	font-size:$twentySixSize;
+.daytime1{
+	// 首页
+	.service-text,.text,.category_text,.news_title,.activity_text,.news_text{
+		font-size:$uni-font-size-sm;
+	}
+	// 行情
+	// 登陆
+	.login_form{
+		.userPhone,.userPassword{
+			font-size:$uni-font-size-base;
+		}
+		.forget_password,.checkBoxText,.login_submit_int{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 我的
+	.all_intOut{
+		.email,.withdraw_rechange_title,.intOutText,.grid-title,.item_text,.goReadNameTwo{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	.noLogin{
+		.go{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	// 设置
+	.setting_box{
+		.setting_title{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	// 钱包
+	.balance_list{
+		.balance_flex,.btn{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 提现
+	.withdrawBox{
+		.nowMoneyNum,.withdraw_text,.bankName,.goBank,.noBindBanks{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	.addNewBank,.selectBankName{
+		font-size:$uni-font-size-sm;
+	}
+	.tipView{
+		.title{
+			font-size:$uni-font-size-base;
+		}
+		.p1{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	// 银行卡
+	.tip_box{
+		.sp2{
+			font-size:30upx;
+		}
+		.sp3{
+			font-size:28upx;
+		}
+	}
+	.titles,.add_text{
+		font-size:28upx;
+	}
+	// 添加银行卡
+	.addBank_tip{
+		font-size:$uni-font-size-base;
+	}
+	.flexBankView{
+		font-size:$uni-font-size-sm;
+	}
+	.bankNumber{
+		font-size:$uni-font-size-sm;
+	}
+	.submit_cartNumber{
+		button{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	// 安全中心
+	.userBindInfo{
+		.bind{
+			font-size:32upx;
+		}
+	}
+	// 充值记录
+	.rechargeView{
+		.rechargeTitle{
+			font-size:$uni-font-size-base;
+		}
+		.rechargeBox,.typeTimer{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	// 充值类型
+	.typeTerm{
+		.typeTermTitle{
+			font-size:$uni-font-size-sm;
+		}
+		.typeList,.typeTimer{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	// 提现记录
+	.withdrawView{
+		.withdrawTitle{
+			font-size:$uni-font-size-base;
+		}
+		.withdrawBox{
+			font-size:$uni-font-size-sm;
+		}
+	}
+	// 设置个人资料
+	.setting_box{
+		.emailView,.setting_title,.submit_btn{
+			font-size:$uni-font-size-sm;
+		}
+		.submit_button{
+			.submit_btn{
+				font-size:$uni-font-size-base;
+			}
+		}
+	}
+	// 设置登陆密码
+	.setTopView{
+		.userText1,.userAccount,.userText1,.newText2{
+			font-size:$uni-font-size-base;
+		}
+	}
 }
 // 中号字体
-$middleTwentySixSize:30rpx;
-$middleTwentyEightSize:32rpx;
-$middleThirtySize:34rpx;
-.daytime2 .service-text{
-	font-size:$middleTwentySixSize;
-}
-.daytime2 .text{
-	font-size:$middleTwentyEightSize;
-}
-.daytime2 .category_list .category_text{
-	font-size:$middleTwentySixSize;
-}
-.daytime2 .news_prople .news_title{
-	font-size:$middleTwentySixSize;
-}
-.daytime2 .hot_activity .activity_text{
-	font-size:$middleTwentySixSize;
-}
-.daytime2 .news_prople .news_text{
-	font-size:$middleThirtySize;
+.daytime2{
+	// 首页
+	.service-text,.text,.category_text,.news_title,.activity_text,.news_text{
+		font-size:$uni-font-size-base;
+	}
+	// 行情
+	// 登陆
+	.login_form{
+		.userPhone,.userPassword{
+			font-size:$uni-font-size-base;
+		}
+		.forget_password,.checkBoxText{
+			font-size:$uni-font-size-base;
+		}
+		.login_submit_int{
+			font-size:$uni-font-size-lg;
+		}
+	}
+	// 我的
+	.all_intOut{
+		.rate,.item_text,.goReadNameTwo{
+			font-size:$uni-font-size-sm;
+		}
+		.email,.withdraw_rechange_title,.intOutText,.grid-title{
+			font-size:$uni-font-size-base;
+		}
+	}
+	.noLogin{
+		.go{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 设置
+	.setting_box{
+		.setting_title{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 钱包
+	.balance_list{
+		.btn{
+			font-size:32upx;
+		}
+		.balance_flex{
+			font-size:$uni-font-size-base;
+		}	
+	} 
+	// 提现
+	.withdrawBox{
+		.nowMoneyNum,.withdraw_text,.bankName,.goBank,.noBindBanks{
+			font-size:$uni-font-size-base;
+		}
+	}
+	.addNewBank,.selectBankName{
+		font-size:$uni-font-size-base;
+	}
+	.tipView{
+		.title{
+			font-size:$uni-font-size-lg;
+		}
+		.p1{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 银行卡
+	.tip_box{
+		.sp2{
+			font-size:34upx;
+		}
+		.sp3{
+			font-size:30upx;
+		}
+	}
+	.titles,.add_text{
+		font-size:30upx;
+	}
+	// 添加银行卡
+	.addBank_tip{
+		font-size:$uni-font-size-base;
+	}
+	.flexBankView{
+		font-size:$uni-font-size-base;
+	}
+	.bankNumber{
+		font-size:$uni-font-size-base;
+	}
+	.submit_cartNumber{
+		button{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 安全中心
+	.userBindInfo{
+		.bind{
+			font-size:34upx;
+		}
+	}
+	// 充值记录
+	.rechargeView{
+		.rechargeTitle{
+			font-size:$uni-font-size-lg;
+		}
+		.rechargeBox,.typeTimer{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 充值类型
+	.typeTerm{
+		.typeTermTitle{
+			font-size:$uni-font-size-base;
+		}
+		.typeList,.typeTimer{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 提现记录
+	.withdrawView{
+		.withdrawTitle{
+			font-size:$uni-font-size-lg;
+		}
+		.withdrawBox{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 设置个人资料
+	.setting_box{
+		.emailView,.setting_title{
+			font-size:$uni-font-size-base;
+		}
+		.submit_button{
+			.submit_btn{
+				font-size:$uni-font-size-base;
+			}
+		}
+	}
+	// 设置登陆密码
+	.setTopView{
+		.userText1,.userAccount,.userText1,.newText2{
+			font-size:$uni-font-size-base;
+		}
+	}
 }
 // 大号字体
-$bigTwentySixSize:32rpx;
-$bigTwentyEightSize:34rpx;
-$bigThirtySize:36rpx;
-.daytime3 .service-text{
-	font-size:$bigThirtySize;
-}
-.daytime3 .text{
-	font-size:$bigTwentyEightSize;
-}
-.daytime3 .category_list .category_text{
-	font-size:$bigThirtySize;
-}
-.daytime3 .news_prople .news_title{
-	font-size:$bigThirtySize;
-}
-.daytime3 .hot_activity .activity_text{
-	font-size:$bigThirtySize;
-}
-.daytime3 .news_prople .news_text{
-	font-size:$bigTwentySixSize;
+.daytime3{
+	// 首页
+	.service-text,.text,.category_text,.news_title,.activity_text,.news_text{
+		font-size:$uni-font-size-lg;
+	}
+	// 行情
+	// 登陆
+	.login_form{
+		.userPhone,.userPassword{
+			font-size:$uni-font-size-lg;
+		}
+		.forget_password,.checkBoxText,.login_submit_int{
+			font-size:$uni-font-size-lg;
+		}
+	}
+	// 我的
+	.all_intOut{
+		.email,.item_text,.grid-title,.intOutText,.withdraw_rechange_title{
+			font-size:$uni-font-size-lg;
+		}
+		.rate,.goReadNameTwo{
+			font-size:$uni-font-size-base;
+		}
+	}
+	.noLogin{
+		.go{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 设置
+	.setting_box{
+		.setting_title{
+			font-size:$uni-font-size-lg;
+		}
+	}
+	// 钱包
+	.balance_list{
+		.balance_flex,.btn{
+			font-size:$uni-font-size-lg;
+		}	
+	} 
+	// 提现
+	.withdrawBox{
+		.nowMoneyNum,.withdraw_text,.bankName,.goBank,.noBindBanks{
+			font-size:$uni-font-size-lg;
+		}
+	}
+	.addNewBank,.selectBankName{
+		font-size:$uni-font-size-lg;
+	}
+	.tipView{
+		.title{
+			font-size:42upx;
+		}
+		.p1{
+			font-size:34upx;
+		}
+	}
+	// 银行卡
+	.tip_box{
+		.sp2{
+			font-size:38upx;
+		}
+		.sp3{
+			font-size:34upx;
+		}
+	}
+	.titles,.add_text{
+		font-size:34upx;
+	}
+	// 添加银行卡
+	.addBank_tip{
+		font-size:$uni-font-size-base;
+	}
+	.flexBankView{
+		font-size:$uni-font-size-lg;
+	}
+	.bankNumber{
+		font-size:$uni-font-size-lg;
+	}
+	.submit_cartNumber{
+		button{
+			font-size:$uni-font-size-lg;
+		}
+	}
+	// 安全中心
+	.userBindInfo{
+		.bind{
+			font-size:38upx;
+		}
+	}
+	// 充值记录
+	.rechargeView{
+		.rechargeTitle{
+			font-size:$uni-font-size-lg;
+		}
+		.rechargeBox{
+			font-size:$uni-font-size-base;
+		}
+	}
+	// 充值类型
+	.typeTerm{
+		.typeTermTitle{
+			font-size:$uni-font-size-lg;
+		}
+		.typeList,.typeTimer{
+			font-size:$uni-font-size-lg;
+		}
+	}
+	// 提现记录
+	.withdrawView{
+		.withdrawTitle{
+			font-size:40upx;
+		}
+		.withdrawBox{
+			font-size:32upx;
+		}
+	}
+	// 设置个人资料
+	.setting_box{
+		.emailView,.setting_title{
+			font-size:$uni-font-size-lg;
+		}
+		.submit_button{
+			.submit_btn{
+				font-size:$uni-font-size-lg;
+			}
+		}
+	}
+	// 设置登陆密码
+	.setTopView{
+		.userText1,.userAccount,.userText1,.newText2{
+			font-size:$uni-font-size-lg;
+		}
+	}
 }
