--- a/pages/my/userCenter/setting/setUserInfo/setUserInfo.scss
+++ b/pages/my/userCenter/setting/setUserInfo/setUserInfo.scss
@@ -7,6 +7,7 @@ page{
 			display:flex;
 			flex-direction: row;
 			padding:22rpx 10rpx;
+			height:60rpx;
 			border-bottom:1px solid #f8f8f8;
 			&.setting_top{
 				border-top:#f3f3f3 solid 1px;
