--- a/pages/my/userCenter/setting/setLoginPassword/setLoginPassword.scss
+++ b/pages/my/userCenter/setting/setLoginPassword/setLoginPassword.scss
@@ -36,14 +36,12 @@ page{
 				flex:0 0 60%;
 				width:60%;
 				color:#666;
-				font-size:32rpx;
 				line-height:60rpx;
 				color:#666;
 				.emailView{
 					height:100%;
 					border:none;
 					outline: none;
-					font-size:30rpx;
 				}
 			}
 			.setting{
@@ -66,10 +64,9 @@ page{
 			}
 		}
 	}
-	.submit_button{
+	.submits{
 		padding:0 26rpx;
 		.submit_btn{
-			font-size:32rpx;
 			background:#1b82d1;
 			margin-top:30rpx
 		}
